qt/gen_qgraphicstransform.h

class QEvent;
class QGraphicsTransform;
class QMatrix4x4;
class QMetaObject;
class QObject;
class QTimerEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QGraphicsRotation QGraphicsRotation;
typedef struct QGraphicsTransform QGraphicsTransform;
typedef struct QMatrix4x4 QMatrix4x4;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
void QGraphicsRotation_axisChanged(QGraphicsRotation* self);
void QGraphicsRotation_connect_axisChanged(QGraphicsRotation* self, intptr_t slot);
struct miqt_string QGraphicsRotation_tr2(const char* s, const char* c);
struct miqt_string QGraphicsRotation_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsRotation_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsRotation_trUtf83(const char* s, const char* c, int n);
bool QGraphicsRotation_override_virtual_metacall(void* self, intptr_t slot);
int QGraphicsRotation_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QGraphicsRotation_override_virtual_applyTo(void* self, intptr_t slot);
void QGraphicsRotation_virtualbase_applyTo(const void* self, QMatrix4x4* matrix);
bool QGraphicsRotation_override_virtual_event(void* self, intptr_t slot);
bool QGraphicsRotation_virtualbase_event(void* self, QEvent* event);
bool QGraphicsRotation_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGraphicsRotation_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QGraphicsRotation_override_virtual_timerEvent(void* self, intptr_t slot);
void QGraphicsRotation_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGraphicsRotation_override_virtual_childEvent(void* self, intptr_t slot);
void QGraphicsRotation_virtualbase_childEvent(void* self, QChildEvent* event);
bool QGraphicsRotation_override_virtual_customEvent(void* self, intptr_t slot);
void QGraphicsRotation_virtualbase_customEvent(void* self, QEvent* event);
bool QGraphicsRotation_override_virtual_connectNotify(void* self, intptr_t slot);
void QGraphicsRotation_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QGraphicsRotation_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGraphicsRotation_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QGraphicsRotation_staticMetaObject();
void QGraphicsRotation_delete(QGraphicsRotation* self);