qt/gen_qgraphicstransform.nim

proc fcQGraphicsRotation_axisChanged(self: pointer, ): void {.importc: "QGraphicsRotation_axisChanged".}
proc fQGraphicsRotation_connect_axisChanged(self: pointer, slot: int) {.importc: "QGraphicsRotation_connect_axisChanged".}
proc fcQGraphicsRotation_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QGraphicsRotation_tr2".}
proc fcQGraphicsRotation_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGraphicsRotation_tr3".}
proc fcQGraphicsRotation_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QGraphicsRotation_trUtf82".}
proc fcQGraphicsRotation_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGraphicsRotation_trUtf83".}
proc fQGraphicsRotation_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QGraphicsRotation_virtualbase_metacall".}
proc fcQGraphicsRotation_override_virtual_metacall(self: pointer, slot: int) {.importc: "QGraphicsRotation_override_virtual_metacall".}
proc fQGraphicsRotation_virtualbase_applyTo(self: pointer, matrix: pointer): void{.importc: "QGraphicsRotation_virtualbase_applyTo".}
proc fcQGraphicsRotation_override_virtual_applyTo(self: pointer, slot: int) {.importc: "QGraphicsRotation_override_virtual_applyTo".}
proc fQGraphicsRotation_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QGraphicsRotation_virtualbase_event".}
proc fcQGraphicsRotation_override_virtual_event(self: pointer, slot: int) {.importc: "QGraphicsRotation_override_virtual_event".}
proc fQGraphicsRotation_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGraphicsRotation_virtualbase_eventFilter".}
proc fcQGraphicsRotation_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGraphicsRotation_override_virtual_eventFilter".}
proc fQGraphicsRotation_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGraphicsRotation_virtualbase_timerEvent".}
proc fcQGraphicsRotation_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGraphicsRotation_override_virtual_timerEvent".}
proc fQGraphicsRotation_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGraphicsRotation_virtualbase_childEvent".}
proc fcQGraphicsRotation_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGraphicsRotation_override_virtual_childEvent".}
proc fQGraphicsRotation_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGraphicsRotation_virtualbase_customEvent".}
proc fcQGraphicsRotation_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGraphicsRotation_override_virtual_customEvent".}
proc fQGraphicsRotation_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsRotation_virtualbase_connectNotify".}
proc fcQGraphicsRotation_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGraphicsRotation_override_virtual_connectNotify".}
proc fQGraphicsRotation_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsRotation_virtualbase_disconnectNotify".}
proc fcQGraphicsRotation_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGraphicsRotation_override_virtual_disconnectNotify".}
proc fcQGraphicsRotation_staticMetaObject(): pointer {.importc: "QGraphicsRotation_staticMetaObject".}
proc fcQGraphicsRotation_delete(self: pointer) {.importc: "QGraphicsRotation_delete".}


func init*(T: type QGraphicsTransform, h: ptr cQGraphicsTransform): QGraphicsTransform =
  T(h: h)
proc create*(T: type QGraphicsTransform, ): QGraphicsTransform =

  QGraphicsTransform.init(fcQGraphicsTransform_new())
proc create*(T: type QGraphicsTransform, parent: gen_qobject.QObject): QGraphicsTransform =

  QGraphicsTransform.init(fcQGraphicsTransform_new2(parent.h))
proc metaObject*(self: QGraphicsTransform, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQGraphicsTransform_metaObject(self.h))

proc metacast*(self: QGraphicsTransform, param1: cstring): pointer =

  fcQGraphicsTransform_metacast(self.h, param1)

proc metacall*(self: QGraphicsTransform, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQGraphicsTransform_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QGraphicsTransform, s: cstring): string =

  let v_ms = fcQGraphicsTransform_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QGraphicsTransform, s: cstring): string =

  let v_ms = fcQGraphicsTransform_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc applyTo*(self: QGraphicsTransform, matrix: gen_qmatrix4x4.QMatrix4x4): void =

  fcQGraphicsTransform_applyTo(self.h, matrix.h)

proc tr2*(_: type QGraphicsTransform, s: cstring, c: cstring): string =

  let v_ms = fcQGraphicsTransform_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QGraphicsTransform, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQGraphicsTransform_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf82*(_: type QGraphicsTransform, s: cstring, c: cstring): string =

  let v_ms = fcQGraphicsTransform_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf83*(_: type QGraphicsTransform, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQGraphicsTransform_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc callVirtualBase_metacall(self: QGraphicsTransform, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =


  fQGraphicsTransform_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QGraphicsTransformmetacallBase* = proc(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
proc onmetacall*(self: QGraphicsTransform, slot: proc(super: QGraphicsTransformmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint) =
  # TODO check subclass
  type Cb = proc(super: QGraphicsTransformmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQGraphicsTransform_override_virtual_metacall(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGraphicsTransform_metacall(self: ptr cQGraphicsTransform, slot: int, param1: cint, param2: cint, param3: pointer): cint {.exportc: "miqt_exec_callback_QGraphicsTransform_metacall ".} =
  type Cb = proc(super: QGraphicsTransformmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): auto =
    callVirtualBase_metacall(QGraphicsTransform(h: self), param1, param2, param3)
  let slotval1 = gen_qobjectdefs.QMetaObjectCall(param1)

  let slotval2 = param2

  let slotval3 = param3


  let virtualReturn = nimfunc[](superCall, slotval1, slotval2, slotval3 )

  virtualReturn
type QGraphicsTransformapplyToBase* = proc(matrix: gen_qmatrix4x4.QMatrix4x4): void
proc onapplyTo*(self: QGraphicsTransform, slot: proc(matrix: gen_qmatrix4x4.QMatrix4x4): void) =
  # TODO check subclass
  type Cb = proc(matrix: gen_qmatrix4x4.QMatrix4x4): void
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQGraphicsTransform_override_virtual_applyTo(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGraphicsTransform_applyTo(self: ptr cQGraphicsTransform, slot: int, matrix: pointer): void {.exportc: "miqt_exec_callback_QGraphicsTransform_applyTo ".} =
  type Cb = proc(matrix: gen_qmatrix4x4.QMatrix4x4): void
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = gen_qmatrix4x4.QMatrix4x4(h: matrix)


  nimfunc[](slotval1)
proc callVirtualBase_event(self: QGraphicsTransform, event: gen_qcoreevent.QEvent): bool =


  fQGraphicsTransform_virtualbase_event(self.h, event.h)

type QGraphicsTransformeventBase* = proc(event: gen_qcoreevent.QEvent): bool
proc onevent*(self: QGraphicsTransform, slot: proc(super: QGraphicsTransformeventBase, event: gen_qcoreevent.QEvent): bool) =
  # TODO check subclass
  type Cb = proc(super: QGraphicsTransformeventBase, event: gen_qcoreevent.QEvent): bool
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQGraphicsTransform_override_virtual_event(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGraphicsTransform_event(self: ptr cQGraphicsTransform, slot: int, event: pointer): bool {.exportc: "miqt_exec_callback_QGraphicsTransform_event ".} =
  type Cb = proc(super: QGraphicsTransformeventBase, event: gen_qcoreevent.QEvent): bool
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(event: gen_qcoreevent.QEvent): auto =
    callVirtualBase_event(QGraphicsTransform(h: self), event)
  let slotval1 = gen_qcoreevent.QEvent(h: event)


  let virtualReturn = nimfunc[](superCall, slotval1 )

  virtualReturn
proc callVirtualBase_eventFilter(self: QGraphicsTransform, watched: gen_qobject.QObject, event: gen_qcoreevent.QEvent): bool =


  fQGraphicsTransform_virtualbase_eventFilter(self.h, watched.h, event.h)

type QGraphicsTransformeventFilterBase* = proc(watched: gen_qobject.QObject, event: gen_qcoreevent.QEvent): bool
proc oneventFilter*(self: QGraphicsTransform, slot: proc(super: QGraphicsTransformeventFilterBase, watched: gen_qobject.QObject, event: gen_qcoreevent.QEvent): bool) =
  # TODO check subclass
  type Cb = proc(super: QGraphicsTransformeventFilterBase, watched: gen_qobject.QObject, event: gen_qcoreevent.QEvent): bool
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQGraphicsTransform_override_virtual_eventFilter(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGraphicsTransform_eventFilter(self: ptr cQGraphicsTransform, slot: int, watched: pointer, event: pointer): bool {.exportc: "miqt_exec_callback_QGraphicsTransform_eventFilter ".} =
  type Cb = proc(super: QGraphicsTransformeventFilterBase, watched: gen_qobject.QObject, event: gen_qcoreevent.QEvent): bool
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(watched: gen_qobject.QObject, event: gen_qcoreevent.QEvent): auto =
    callVirtualBase_eventFilter(QGraphicsTransform(h: self), watched, event)
  let slotval1 = gen_qobject.QObject(h: watched)

  let slotval2 = gen_qcoreevent.QEvent(h: event)


  let virtualReturn = nimfunc[](superCall, slotval1, slotval2 )

  virtualReturn
proc callVirtualBase_timerEvent(self: QGraphicsTransform, event: gen_qcoreevent.QTimerEvent): void =


  fQGraphicsTransform_virtualbase_timerEvent(self.h, event.h)

type QGraphicsTransformtimerEventBase* = proc(event: gen_qcoreevent.QTimerEvent): void
proc ontimerEvent*(self: QGraphicsTransform, slot: proc(super: QGraphicsTransformtimerEventBase, event: gen_qcoreevent.QTimerEvent): void) =
  # TODO check subclass
  type Cb = proc(super: QGraphicsTransformtimerEventBase, event: gen_qcoreevent.QTimerEvent): void
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQGraphicsTransform_override_virtual_timerEvent(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGraphicsTransform_timerEvent(self: ptr cQGraphicsTransform, slot: int, event: pointer): void {.exportc: "miqt_exec_callback_QGraphicsTransform_timerEvent ".} =
  type Cb = proc(super: QGraphicsTransformtimerEventBase, event: gen_qcoreevent.QTimerEvent): void
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(event: gen_qcoreevent.QTimerEvent): auto =
    callVirtualBase_timerEvent(QGraphicsTransform(h: self), event)
  let slotval1 = gen_qcoreevent.QTimerEvent(h: event)

